--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {},
   "dependencies": {
     "express": "^4.13.1",
+    "opener": "^1.4.1",
     "socket.io": "^1.3.5"
   },
   "bin": {
