--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "logger-socket",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Stream logs through sockets",
   "main": "logger.js",
   "scripts": {},
@@ -20,6 +20,7 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "async": "^1.4.0",
     "express": "^4.13.1",
     "opener": "^1.4.1",
     "socket.io": "^1.3.5"
